--- a/Frontend/test.css
+++ b/Frontend/test.css
@@ -397,7 +397,7 @@ img {
   text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: 8vmin; 
+  font-size: 3vw; 
 }
 
 .game_info:hover {
