--- a/Frontend/test.css
+++ b/Frontend/test.css
@@ -393,7 +393,7 @@ img {
   z-index: 1;
   color: rgba(255, 255, 255, 0);
   transition: color 0.25s;
-  font-family: 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
   text-align: center;
   align-items: center;
   justify-content: center;
